TestSuite/errors/err0139.pas
type TArr = array[string] of real; 
begin
end.